--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -59,9 +59,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - AKUN1
-      - AKUN2
-      - AKUN3
+      - AKUNID
       
   - name: IKLAN
     type: select
