--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -45,6 +45,45 @@ proxies:
     path: /trojan-ws
   headers:
       Host: ums2.xmd.asia
+- name: IDNUSA
+  type: trojan
+  server: 104.22.5.240
+  port: 443
+  password: Bhpr3uD33lyqvnNTKWjOxA
+  udp: true
+  sni: man4.xmd.asia
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+  headers:
+      Host: man4.xmd.asia
+- name: SGLEAS
+  type: trojan
+  server: 104.22.5.240
+  port: 443
+  password: KQ3GjQcwaORsYgO5znE4JQ
+  udp: true
+  sni: lwb1.xmd.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+  headers:
+      Host: lwb1.xmd.my.id
+- name: VPNSTORE
+  type: trojan
+  server: 104.22.5.240
+  port: 443
+  password: f8af3d05-069f-4566-b88f-93d177f1f5dd
+  udp: true
+  sni: nadiavip8.vpnstore28.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan
+  headers:
+      Host: nadiavip8.vpnstore28.my.id      
 
 proxy-groups:
   - name: ID-X
@@ -53,6 +92,9 @@ proxy-groups:
     interval: 300
     proxies:
       - AKUNID
+      - IDNUSA
+      - SGLEAS
+      - VPNSTORE
 
   - name: MIX-X
     type: fallback
@@ -60,6 +102,9 @@ proxy-groups:
     interval: 300
     proxies:
       - AKUNID
+      - IDNUSA
+      - SGLEAS
+      - VPNSTORE
       
   - name: IKLAN
     type: select
