--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -87,7 +87,7 @@ proxies:
 
 proxy-groups:
   - name: ID-X
-    type: fallback
+    type: select
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
