--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -34,11 +34,11 @@ dns:
 proxies:
 - name: AKUNID
   type: trojan
-  server: ums2.xmd.asia
+  server: 104.22.5.240
   port: 443
   password: W79hqVWaHHS3ZB8Jrxbclg
   udp: true
-  sni: investor.fb.com
+  sni: ums2.xmd.asia
   skip-cert-verify: true
   network: ws
   ws-opts:
@@ -47,17 +47,17 @@ proxies:
       Host: ums2.xmd.asia
 - name: IDNUSA
   type: trojan
-  server: quiz.int.vidio.com
+  server: 104.22.5.240
   port: 443
   password: Bhpr3uD33lyqvnNTKWjOxA
   udp: true
-  sni: quiz.int.vidio.com.man4.xmd.asia
+  sni: man4.xmd.asia
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
   headers:
-      Host: quiz.int.vidio.com.man4.xmd.asia
+      Host: man4.xmd.asia
 - name: SGLEAS
   type: trojan
   server: lwb1.xmd.my.id
@@ -160,6 +160,7 @@ rule-providers:
     type: file
     behavior: domain
     path: ./block.yaml  
+
 
 
 
