--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -36,7 +36,7 @@ proxies:
   type: trojan
   server: support.zoom.us
   port: 443
-  password: 7815433-4119-4bbd-9525-8c1f824d1326
+  password: b7815433-4119-4bbd-9525-8c1f824d1326
   udp: true
   sni: zoomgov.vpnstore28.my.id
   skip-cert-verify: true
@@ -145,6 +145,7 @@ rule-providers:
     type: file
     behavior: domain
     path: ./block.yaml  
+
 
 
 
